Misc. cleanup and enable google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Taylor Peterson
 description: Taylor Peterson's personal site
+baseurl: taylor-peterson.github.io
 
-exclude: ['README.mk', 'LICENSE']
+exclude: ['README.md', 'LICENSE']
