Experiment with global permalink formatting

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 name: Taylor Peterson
 description: Taylor Peterson's personal site
 
-exclude: ['README.md', 'LICENSE']
+exclude:
+  - 'README.md'
+  - 'LICENSE'
+
+permalink: pretty
