Move everything under _source and _source/layout, plus add test collection

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,14 @@ exclude:
   - 'LICENSE'
 
 permalink: /:categories/:title
+
+collections:
+  testcollection:
+    output: true
+
+source:       _source
+
+data_dir:     _assets/data
+includes_dir: _assets/includes
+layouts_dir:  _assets/layouts
+plugins_dir:  _assets/plugins
