Convert tutorials into a collection

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ exclude:
 permalink: /:categories/:title
 
 collections:
+  landing_pages:
+    output: true
   projects:
     output: true
-  landing_pages:
+  tutorials:
     output: true
