Extract landing page permalink settings to config

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ collections:
     output: true
   landing_pages:
     output: true
+    permalink: /:name/
   musings:
     output: true
   projects:
